--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h2 {
 
 .hero{
     height: 300px;
-    background-color: black;
+    background-color: #000000;
     justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
