--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ h2 {
 }
 
 .header{
-    background-color: #000000;
+    background-color: #1b2127;
     color: white;
     display: flex;
     height: 120px;
@@ -536,7 +536,7 @@ figure{
 }
 
 @media screen and (max-width: 767px){
-
+    
     .burguer-button{
         display: block;
     }
@@ -553,6 +553,7 @@ figure{
         padding-top: 4px;
         display: block;
         height: auto;
+        background-color: #000000;
     }
 
     .header ol{
