--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ figure{
 .experience-list-title,
 .portfolio-title{
     margin-left: 20px;
+    margin-right: 20px;
     font-family: 'tesla';
 }
 
