--- a/style.css
+++ b/style.css
@@ -505,7 +505,7 @@ figure{
         display: none;
     }
     
-    .badge-base LI-profile-badge{
+    .linkedin1{
         display: none;
     }
 
