--- a/style.css
+++ b/style.css
@@ -550,6 +550,10 @@ figure{
 
 @media screen and (max-width: 767px){
     
+    #linkedin{
+        display: none;
+    }
+    
     .burguer-button{
         display: block;
     }
