--- a/style.css
+++ b/style.css
@@ -553,6 +553,9 @@ figure{
 }
 
 @media screen and (max-width: 767px){
+    #linkedin{
+        display: none;
+    }
     
     .burguer-button{
         display: block;
@@ -660,6 +663,10 @@ figure{
 }
 
 @media screen and (max-width: 480px){
+    #linkedin{
+        display: none;
+    }
+    
     .portfolio-title{
         margin-left: 10px;
     } 
